alteracoes nas configs